--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bus Routes</title>
+    <style>
+        html,
+        body,
+        #root {
+            margin: 0;
+            padding: 0;
+            min-height: 100vh;
+            background: none !important;
+        }
+
+        body {
+            overflow-x: hidden;
+        }
+    </style>
 </head>
 
 <body>
