--- a/index.html
+++ b/index.html
@@ -6,24 +6,10 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bus Routes</title>
-    <style>
-        html,
-        body,
-        #root {
-            margin: 0;
-            padding: 0;
-            min-height: 100vh;
-            background: none !important;
-        }
-
-        body {
-            overflow-x: hidden;
-        }
-    </style>
 </head>
 
-<body>
-    <div id="root"></div>
+<body class="min-h-screen overflow-x-hidden m-0 p-0">
+    <div id="root" class="min-h-screen m-0 p-0"></div>
     <script type="module" src="/src/main.jsx"></script>
 </body>
 
