--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Bus Routes</title>
 </head>
 
-<body class="min-h-screen overflow-x-hidden m-0 p-0">
-    <div id="root" class="min-h-screen m-0 p-0"></div>
+<body class="m-0 p-0">
+    <div id="root" class="m-0 p-0"></div>
     <script type="module" src="/src/main.jsx"></script>
 </body>
 
